cabal-version:      2.4
name:               aoc-polyglot
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             metsis
maintainer:         mika@omen.fi

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable aoc-polyglot
    main-is:          generate.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                      , random

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
